bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: everlasting-fairytale
    labels:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: everlasting-fairytale
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: everlasting-fairytale
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: node-app
                  image: everlasting-fairytale-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-8080
                      containerPort: 8080
