bridge/base/jaeger-deployment.yaml
#! jaeger-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jaeger
    namespace: everlasting-fairytale
    labels:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: jaeger
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: everlasting-fairytale
            com.docker.compose.service: jaeger
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: everlasting-fairytale
                com.docker.compose.service: jaeger
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: jaeger
                  image: jaegertracing/all-in-one:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: jaeger-16686
                      containerPort: 16686
                    - name: jaeger-5775
                      containerPort: 5775
                    - name: jaeger-14250
                      containerPort: 14250
                    - name: jaeger-14268
                      containerPort: 14268
                    - name: jaeger-4317
                      containerPort: 4317
                    - name: jaeger-4318
                      containerPort: 4318
                    - name: jaeger-9411
                      containerPort: 9411
                    - name: jaeger-6831
                      containerPort: 6831
                    - name: jaeger-6832
                      containerPort: 6832
                    - name: jaeger-5778
                      containerPort: 5778
