bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: everlasting-fairytale
    labels:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: app
    ports:
        - name: app-8080
          port: 8080
          protocol: TCP
          targetPort: app-8080

# check if there is at least one published port
