bridge/base/jaeger-service.yaml
#! jaeger-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: jaeger-published
    namespace: everlasting-fairytale
    labels:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: jaeger
spec:
    selector:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: jaeger
    ports:
        - name: jaeger-5775
          port: 5775
          protocol: UDP
          targetPort: jaeger-5775
        - name: jaeger-6831
          port: 6831
          protocol: UDP
          targetPort: jaeger-6831
        - name: jaeger-6832
          port: 6832
          protocol: UDP
          targetPort: jaeger-6832
        - name: jaeger-5778
          port: 5778
          protocol: TCP
          targetPort: jaeger-5778
        - name: jaeger-16686
          port: 16686
          protocol: TCP
          targetPort: jaeger-16686
        - name: jaeger-14268
          port: 14268
          protocol: TCP
          targetPort: jaeger-14268

# check if there is at least one published port
