bridge/base/tempo-expose.yaml
#! tempo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: tempo
    namespace: everlasting-fairytale
    labels:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: tempo
spec:
    selector:
        com.docker.compose.project: everlasting-fairytale
        com.docker.compose.service: tempo
    ports:
        - name: tempo-3200
          port: 3200
          targetPort: tempo-3200
        - name: tempo-9411
          port: 9411
          targetPort: tempo-9411
        - name: tempo-4318
          port: 4318
          targetPort: tempo-4318
